@@ -98,6 +98,7 @@ $Id$
 - [doc] The linked-tables infrastructure is now called phpMyAdmin
   configuration storage.
 - [interface] Move drop/empty links from being tabs to Operations tab.
+- [interface] Fixed rendering of error/notice/info titles background.
 
 3.3.6.0 (not yet released)
 - bug #3033063 [core] Navi gets wrong db name
